--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <tr>
                         <td rowspan="3">Atelier Elie GB</td>
                         <td rowspan="3">
-                            <a target="_blank" href="https://github.com/m-mayday/atelier-marie-gb">
+                            <a target="_blank" href="https://github.com/m-mayday/game-translations/tree/main/Atelier%20Elie%20GB">
                                 Link
                             </a>
                         </td>
@@ -44,19 +44,19 @@
                     <tr>
                         <td>
                             <a target="_blank"
-                                href="https://github.com/m-mayday/atelier-marie-gb/raw/refs/heads/main/Atelier%20Marie%20GB%20(English)%20v1.1.bps">
+                                href="https://github.com/m-mayday/game-translations/raw/refs/heads/main/Atelier%20Elie%20GB/Atelier%20Elie%20GB%20(English)%20v1.0.bps">
                                 V1.0 - Regular
                             </a>
                         </td>
                         <td>
-                            Latests version.
+                            Latest version.
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <a target="_blank"
-                                href="https://github.com/m-mayday/atelier-marie-gb/raw/refs/heads/main/Atelier%20Marie%20GB%20(English)%20v1.1%20-%20Double%20Speed.bps">
-                                V1.2 - Double Speed
+                                href="https://github.com/m-mayday/game-translations/raw/refs/heads/main/Atelier%20Elie%20GB/Atelier%20Elie%20GB%20(English)%20v1.0%20-%20Double%20Speed.bps">
+                                V1.0 - Double Speed
                             </a>
                         </td>
                         <td>
@@ -68,7 +68,7 @@
                     <tr>
                         <td rowspan="3">Atelier Marie GB</td>
                         <td rowspan="3">
-                            <a target="_blank" href="https://github.com/m-mayday/atelier-marie-gb">
+                            <a target="_blank" href="https://github.com/m-mayday/game-translations/tree/main/Atelier%20Marie%20GB">
                                 Link
                             </a>
                         </td>
@@ -77,7 +77,7 @@
                     <tr>
                         <td>
                             <a target="_blank"
-                                href="https://github.com/m-mayday/atelier-marie-gb/raw/refs/heads/main/Atelier%20Marie%20GB%20(English)%20v1.1.bps">
+                                href="https://github.com/m-mayday/game-translations/raw/refs/heads/main/Atelier%20Marie%20GB/Atelier%20Marie%20GB%20(English)%20v1.2.bps">
                                 V1.2 - Regular
                             </a>
                         </td>
@@ -88,7 +88,7 @@
                     <tr>
                         <td>
                             <a target="_blank"
-                                href="https://github.com/m-mayday/atelier-marie-gb/raw/refs/heads/main/Atelier%20Marie%20GB%20(English)%20v1.1%20-%20Double%20Speed.bps">
+                                href="https://github.com/m-mayday/game-translations/raw/refs/heads/main/Atelier%20Marie%20GB/Atelier%20Marie%20GB%20(English)%20v1.2%20-%20Double%20Speed.bps">
                                 V1.2 - Double Speed
                             </a>
                         </td>
@@ -119,7 +119,7 @@
                     <tr>
                         <td rowspan="4">Atelier Marie GB</td>
                         <td rowspan="4">
-                            <a target="_blank" href="https://github.com/m-mayday/atelier-marie-gb">
+                            <a target="_blank" href="https://github.com/m-mayday/game-translations/tree/main/Atelier%20Marie%20GB">
                                 Link
                             </a>
                         </td>
@@ -128,7 +128,7 @@
                         <td rowspan="2">2024-09-05</td>
                         <td>
                             <a target="_blank"
-                                href="https://github.com/m-mayday/atelier-marie-gb/raw/refs/heads/main/Atelier%20Marie%20GB%20(English)%20v1.1.bps">
+                                href="https://github.com/m-mayday/game-translations/raw/refs/heads/main/Atelier%20Marie%20GB/Archive/Atelier%20Marie%20GB%20(English)%20v1.1.bps">
                                 V1.1 - Regular
                             </a>
                         </td>
@@ -139,7 +139,7 @@
                     <tr>
                         <td>
                             <a target="_blank"
-                                href="https://github.com/m-mayday/atelier-marie-gb/raw/refs/heads/main/Atelier%20Marie%20GB%20(English)%20v1.1%20-%20Double%20Speed.bps">
+                                href="https://github.com/m-mayday/game-translations/raw/refs/heads/main/Atelier%20Marie%20GB/Archive/Atelier%20Marie%20GB%20(English)%20v1.1%20-%20Double%20Speed.bps">
                                 V1.1 - Double Speed
                             </a>
                         </td>
@@ -148,7 +148,7 @@
                         <td>2024-08-20</td>
                         <td>
                             <a target="_blank"
-                                href="https://github.com/m-mayday/atelier-marie-gb/raw/refs/heads/main/Atelier%20Marie%20GB%20(English)%20v1.0.bps">
+                                href="https://github.com/m-mayday/game-translations/raw/refs/heads/main/Atelier%20Marie%20GB/Archive/Atelier%20Marie%20GB%20(English)%20v1.0.bps">
                                 V1.0
                             </a>
                         </td>
